--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Vanilla</title>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/22df1091ee.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
-        <header>Header</header>
-        <div class="content">Content</div>
-        <footer>footer</footer>
+        <header>
+            <a class="header-brand" href="./index.html">Blog Vanilla</a>
+            <ul>
+                <li>
+                    <a class="header-nav active" href="./index.html">Accueil</a>
+                </li>
+                <li>
+                    <a class="header-nav" href="./form.html">Créer un article</a>
+                </li>
+            </ul>
+        </header>
+        <div class="content">
+            <div class="articles-container">
+                <div class="article">
+                    <img src="./assets/img/profil1.jpg" alt="Image deprofil">
+                    <h2>Titrede l'article</h2>
+                    <p class="article-author">Albator</p>
+                    <p class="article-content">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea quasi aliquam placeat nam minus explicabo itaque inventore molestias cumque!
+                    </p>
+                    <div class="article-actions">
+                        <button class="btn btn-suppression">Supprimer</button>
+                        <button class="btn btn-primary">Modifier</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer><i class="far fa-copyright"></i> Blog Vanilla - 2020</footer>
     </div>
 </body>
 </html>
