--- a/src/form/form.html
+++ b/src/form/form.html
@@ -28,8 +28,17 @@
                     <input type="text" name="author">
                 </div>
                 <div class="form-group">
+                    <label for="image">Image de profil</label>
+                    <input type="text" name="image">
+                </div>
+                <div class="form-group">
                     <label for="categorie">Categorie</label>
                     <input type="text" name="categorie">
+                </div>
+                
+                <div class="form-group">
+                    <label for="title">Titre</label>
+                    <input type="text" name="title">
                 </div>
                 <div class="form-group">
                     <label for="content">Article</label>
