--- a/src/form/form.html
+++ b/src/form/form.html
@@ -11,14 +11,19 @@
     <div class="container">
         <header>
             <a class="header-brand" href="./index.html">Blog Vanilla</a>
-            <ul>
-                <li>
-                    <a class="header-nav" href="./index.html">Accueil</a>
-                </li>
-                <li>
-                    <a class="header-nav active" href="./form.html">Créer un article</a>
-                </li>
-            </ul>
+            <div class="header-menu">
+                <ul>
+                    <li>
+                        <a class="header-nav" href="./index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a class="header-nav active" href="./form.html">Créer un article</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="header-menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
         </header>
         <div class="content">
             <form>
