--- a/src/index.html
+++ b/src/index.html
@@ -11,29 +11,23 @@
     <div class="container">
         <header>
             <a class="header-brand" href="./index.html">Blog Vanilla</a>
-            <ul>
-                <li>
-                    <a class="header-nav active" href="./index.html">Accueil</a>
-                </li>
-                <li>
-                    <a class="header-nav" href="./form.html">Créer un article</a>
-                </li>
-            </ul>
+            <div class="header-menu">
+                <ul>
+                    <li>
+                        <a class="header-nav active" href="./index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a class="header-nav" href="./form.html">Créer un article</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="header-menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
         </header>
         <div class="content">
             <div class="articles-container">
-                <div class="article">
-                    <img src="./assets/img/profil1.jpg" alt="Image deprofil">
-                    <h2>Titre de l'article</h2>
-                    <p class="article-author">Albator</p>
-                    <p class="article-content">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit ea quasi aliquam placeat nam minus explicabo itaque inventore molestias cumque!
-                    </p>
-                    <div class="article-actions">
-                        <button class="btn btn-suppression">Supprimer</button>
-                        <button class="btn btn-primary">Modifier</button>
-                    </div>
-                </div>
+                
             </div>
         </div>
         <footer><i class="far fa-copyright"></i> Blog Vanilla - 2020</footer>
