Ajout d'eventlistener sur button pour navigation lors de validation ou d'annulation + mise en place de la partie édition pour les articles existants

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -51,8 +51,8 @@
                 </div>
                 <ul id='errors' class="text-error"></ul>
                 <div class="form-btn-container">
-                    <button class="btn btn-annulation">Annuler</button>
-                    <button class="btn btn-validation">Sauvegarder</button>
+                    <button type="button" class="btn btn-annulation">Annuler</button>
+                    <button type="submit" class="btn btn-validation">Sauvegarder</button>
                 </div>
             </form>
         </div>
