--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,14 @@
             </div>
         </header>
         <div class="content">
+            <div class="sidebar">
+                <ul class="categories-container">
+                    <li>Histoire ( <strong>1</strong> )</li>
+                    <li>Foot ( 1 )</li>
+                    <li>Alimentation ( 1 )</li>
+                    <li>Autre ( 1 )</li>
+                </ul>
+            </div>
             <div class="articles-container">
                 
             </div>
